cmake_minimum_required(VERSION 3.9)
project(git_cpp)

set(CMAKE_CXX_STANDARD 11)

add_executable(git_cpp
        d01/ex06/HumanA.cpp
        d01/ex06/HumanA.hpp
        d01/ex06/HumanB.cpp
        d01/ex06/HumanB.hpp
        d01/ex06/main.cpp
        d01/ex06/Weapon.class.cpp
        d01/ex06/Weapon.class.hpp
        d01/ex07/main.cpp
        d01/ex08/Human.cpp
        d01/ex08/Human.hpp
        d01/ex08/main.cpp
        d01/ex09/Logger.cpp
        d01/ex09/Logger.hpp
        d01/ex09/main.cpp
        d01/ex10/main.cpp
        d02/Integer.class.cpp
        d02/Integer.class.hpp
        d02/main.cpp
        d03/ex00/FragTrap.cpp
        d03/ex00/FragTrap.hpp
        d03/ex00/main.cpp
        d03/ex01/FragTrap.cpp
        d03/ex01/FragTrap.hpp
        d03/ex01/main.cpp
        d03/ex01/ScavTrap.cpp
        d03/ex01/ScavTrap.hpp
        d03/ex02/ClapTrap.cpp
        d03/ex02/ClapTrap.hpp
        d03/ex02/FragTrap.cpp
        d03/ex02/FragTrap.hpp
        d03/ex02/main.cpp
        d03/ex02/ScavTrap.cpp
        d03/ex02/ScavTrap.hpp
        d03/ex03/ClapTrap.cpp
        d03/ex03/ClapTrap.hpp
        d03/ex03/FragTrap.cpp
        d03/ex03/FragTrap.hpp
        d03/ex03/main.cpp
        d03/ex03/NinjaTrap.cpp
        d03/ex03/NinjaTrap.hpp
        d03/ex03/ScavTrap.cpp
        d03/ex03/ScavTrap.hpp
        d03/ex04/ClapTrap.cpp
        d03/ex04/ClapTrap.hpp
        d03/ex04/FragTrap.cpp
        d03/ex04/FragTrap.hpp
        d03/ex04/main.cpp
        d03/ex04/NinjaTrap.cpp
        d03/ex04/NinjaTrap.hpp
        d03/ex04/ScavTrap.cpp
        d03/ex04/ScavTrap.hpp
        d03/ex04/SuperTrap.cpp
        d03/ex04/SuperTrap.hpp
        d04/ex00/main.cpp
        d04/ex00/Peon.cpp
        d04/ex00/Peon.hpp
        d04/ex00/Sorcerer.cpp
        d04/ex00/Sorcerer.hpp
        d04/ex00/Victim.cpp
        d04/ex00/Victim.hpp
        d04/ex01/AWeapon.cpp
        d04/ex01/AWeapon.hpp
        d04/ex01/Character.cpp
        d04/ex01/Character.hpp
        d04/ex01/Enemy.cpp
        d04/ex01/Enemy.hpp
        d04/ex01/main.cpp
        d04/ex01/PlasmaRifle.cpp
        d04/ex01/PlasmaRifle.hpp
        d04/ex01/PowerFist.cpp
        d04/ex01/PowerFist.hpp
        d04/ex01/RadScorpion.cpp
        d04/ex01/RadScorpion.hpp
        d04/ex01/SuperMutant.cpp
        d04/ex01/SuperMutant.hpp d04/ex02/Squad.cpp d04/ex02/Squad.hpp d04/ex02/TacticalMarine.cpp d04/ex02/TacticalMarine.hpp d04/ex02/AssaultTerminator.cpp d04/ex02/AssaultTerminator.hpp d04/ex02/ISpaceMarine.hpp d04/ex02/ISquad.hpp d04/ex02/main.cpp)
