cmake_minimum_required(VERSION 3.9)
project(git_cpp)

set(CMAKE_CXX_STANDARD 11)

add_executable(git_cpp
        d00/ex00/megaphone.cpp
        d00/ex01/Contact.class.cpp
        d00/ex01/Contact.class.hpp
        d00/ex01/contactForm.cpp
        d00/ex01/contactSearch.cpp
        d00/ex01/map.cpp
        d00/ex02/Account.class.cpp
        d00/ex02/Account.class.hpp
        d00/ex02/tests.cpp
        d01/ex00/main.cpp
        d01/ex00/Pony.class.cpp
        d01/ex00/Pony.class.hpp
        d01/ex01/ex01.cpp
        d01/ex02/main.cpp
        d01/ex02/Zombie.cpp
        d01/ex02/Zombie.hpp
        d01/ex02/ZombieEvent.cpp
        d01/ex02/ZombieEvent.hpp
        d01/ex03/main.cpp
        d01/ex03/Zombie.cpp
        d01/ex03/Zombie.hpp
        d01/ex03/ZombieHorde.cpp
        d01/ex03/ZombieHorde.hpp
        d01/ex04/ex04.cpp
        d01/ex05/Brain.class.cpp
        d01/ex05/Brain.class.hpp
        d01/ex05/Human.class.cpp
        d01/ex05/Human.class.hpp
        d01/ex05/main.cpp
        d01/ex06/HumanA.cpp
        d01/ex06/HumanA.hpp
        d01/ex06/HumanB.cpp
        d01/ex06/HumanB.hpp
        d01/ex06/main.cpp
        d01/ex06/Weapon.class.cpp
        d01/ex06/Weapon.class.hpp
        d01/ex07/main.cpp
        d01/ex08/Human.cpp
        d01/ex08/Human.hpp
        d01/ex08/main.cpp
        d01/ex09/Logger.cpp
        d01/ex09/Logger.hpp
        d01/ex09/main.cpp
        d01/ex10/main.cpp
        d02
        d03/ex00/FragTrap.cpp
        d03/ex00/FragTrap.hpp
        d03/ex00/main.cpp
        d03/ex01/FragTrap.cpp
        d03/ex01/FragTrap.hpp
        d03/ex01/main.cpp
        d03/ex01/ScavTrap.cpp
        d03/ex01/ScavTrap.hpp
        d03/ex02/ClapTrap.cpp
        d03/ex02/ClapTrap.hpp
        d03/ex02/FragTrap.cpp
        d03/ex02/FragTrap.hpp
        d03/ex02/main.cpp
        d03/ex02/ScavTrap.cpp
        d03/ex02/ScavTrap.hpp
        d03/ex03/ClapTrap.cpp
        d03/ex03/ClapTrap.hpp
        d03/ex03/FragTrap.cpp
        d03/ex03/FragTrap.hpp
        d03/ex03/main.cpp
        d03/ex03/NinjaTrap.cpp
        d03/ex03/NinjaTrap.hpp
        d03/ex03/ScavTrap.cpp
        d03/ex03/ScavTrap.hpp
        d03/ex04/ClapTrap.cpp
        d03/ex04/ClapTrap.hpp
        d03/ex04/FragTrap.cpp
        d03/ex04/FragTrap.hpp
        d03/ex04/main.cpp
        d03/ex04/NinjaTrap.cpp
        d03/ex04/NinjaTrap.hpp
        d03/ex04/ScavTrap.cpp
        d03/ex04/ScavTrap.hpp
        d03/ex04/SuperTrap.cpp
        d03/ex04/SuperTrap.hpp
        d04/ex00/main.cpp
        d04/ex00/Peon.cpp
        d04/ex00/Peon.hpp
        d04/ex00/Sorcerer.cpp
        d04/ex00/Sorcerer.hpp
        d04/ex00/Victim.cpp
        d04/ex00/Victim.hpp
        d04/ex01/AWeapon.cpp
        d04/ex01/AWeapon.hpp
        d04/ex01/Character.cpp
        d04/ex01/Character.hpp
        d04/ex01/Enemy.cpp
        d04/ex01/Enemy.hpp
        d04/ex01/main.cpp
        d04/ex01/PlasmaRifle.cpp
        d04/ex01/PlasmaRifle.hpp
        d04/ex01/PowerFist.cpp
        d04/ex01/PowerFist.hpp
        d04/ex01/RadScorpion.cpp
        d04/ex01/RadScorpion.hpp
        d04/ex01/SuperMutant.cpp
        d04/ex01/SuperMutant.hpp
        d04/ex02/AssaultTerminator.cpp
        d04/ex02/AssaultTerminator.hpp
        d04/ex02/ISpaceMarine.hpp
        d04/ex02/ISquad.hpp
        d04/ex02/main.cpp
        d04/ex02/Squad.cpp
        d04/ex02/Squad.hpp
        d04/ex02/TacticalMarine.cpp
        d04/ex02/TacticalMarine.hpp
        d04/ex03/AMateria.cpp
        d04/ex03/AMateria.hpp
        d04/ex03/Character.cpp
        d04/ex03/Character.hpp
        d04/ex03/Cure.cpp
        d04/ex03/Cure.hpp
        d04/ex03/Ice.cpp
        d04/ex03/Ice.hpp
        d04/ex03/ICharacter.hpp
        d04/ex03/IMateriaSource.hpp
        d04/ex03/main.cpp
        d04/ex03/MateriaSource.cpp
        d04/ex03/MateriaSource.hpp
        d04/ex04/DeepCoreMiner.cpp
        d04/ex04/DeepCoreMiner.hpp
        d04/ex04/AsteroKreog.cpp
        d04/ex04/AsteroKreog.hpp
        d04/ex04/IAsteroid.hpp
        d04/ex04/IMiningLaser.hpp
        d04/ex04/KoalaSteroid.cpp
        d04/ex04/KoalaSteroid.hpp
        d04/ex04/main.cpp
        d04/ex04/MiningBarge.cpp
        d04/ex04/MiningBarge.hpp
        d04/ex04/StripMiner.cpp
        d04/ex04/StripMiner.hpp
        rush00
        rush00/Ship.class.cpp
        rush00/Ship.class.hpp
        rush00/Shot.class.cpp
        rush00/Shot.class.hpp
        rush00/Base.class.cpp
        rush00/Base.class.hpp
        d05 d05/ex03/Intern.cpp d05/ex03/Intern.hpp d05/ex04/OfficeBlock.cpp d05/ex04/OfficeBlock.hpp d06/ex00/main.cpp d06/ex00/Convert.cpp d06/ex00/Convert.hpp d06/ex01/main.cpp d06/ex02/main.cpp d06/ex02/Base.cpp d06/ex02/Base.hpp d06/ex02/A.cpp d06/ex02/A.hpp d06/ex02/B.cpp d06/ex02/B.hpp d06/ex02/C.cpp d06/ex02/C.hpp d07/ex00/main.cpp d07/ex01/main.cpp d07/ex02/Array.hpp d07/ex02/main.cpp d08/ex00/main.cpp d08/ex00/easyfind.hpp d08/ex01/span.cpp d08/ex01/span.hpp d08/ex01/main.cpp d08/ex02/mutantstack.cpp d08/ex02/mutantstack.hpp d08/ex02/main.cpp d08/ex03/main.cpp d08/ex03/Machine.hpp d08/ex03/AInstruction.cpp d08/ex03/AInstruction.hpp d08/ex03/Machine.cpp d08/ex03/NextBox.cpp d08/ex03/NextBox.hpp d08/ex03/PrevBox.cpp d08/ex03/PrevBox.hpp d08/ex03/Increment.cpp d08/ex03/Increment.hpp d08/ex03/Decrement.cpp d08/ex03/Decrement.hpp d08/ex03/Print.cpp d08/ex03/Print.hpp d08/ex03/GoFront.cpp d08/ex03/GoFront.hpp d08/ex03/GoBack.cpp d08/ex03/GoBack.hpp
        rush01)
